# senryaku

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
alembic/: env.py
alembic/versions/: d8ed23b23f21_initial_schema.py
deploy/: build.sh
docs/plans/: 2026-02-26-senryaku-design.md  2026-02-26-senryaku-implementation.md
scripts/: seed.py
senryaku/: config.py  database.py  main.py  models.py  schemas.py
senryaku/routers/: campaigns.py  dashboard.py  missions.py  operations.py  sorties.py
senryaku/services/: briefing.py  drift.py  health.py  notifications.py  review.py  scheduler.py
senryaku/static/: app.css  app.js
senryaku/templates/: base.html  briefing.html  campaign_detail.html  checkin.html  dashboard.html  drift.html  review.html  settings.html  sortie_focus.html
senryaku/templates/partials/: aar_form.html  campaign_card.html  campaign_form.html  checkin_form.html  mission_form.html  route_result.html  sortie_form.html  sortie_row.html
tests/: conftest.py  test_api.py  test_briefing.py  test_drift.py  test_health.py  test_models.py  test_operations.py  test_review.py
